feat: added Swagger supported
added
1. imported swaggo/gin-swagger for auto generates Swagger UI.
2. implemented full usage of swagger in handler

modified:
1. remove redundant comments on methods other than handler ones.
-> otherwise, generation will fail. Cannot comment as Java style.
2. updated makefile. Run, build, clean, swag, migrate and generate
   is now functioning.

TODOs:
1. linting for code by adding .editorconfig.
2. added some docs of installing deps. such as wire, swag.
3. modified logging methods to choose, like turning on and off in .env
   file, file splitting and file name output by timestamp etc.
