# docs/swagger.yaml
@@ -64,9 +64,15 @@ info:
   title: Go Template API
   version: "1.0"
 paths:
-  /user:
+  /user/{id}:
     delete:
       description: 刪除指定使用者
+      parameters:
+      - description: 使用者 ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -82,11 +88,19 @@ paths:
           description: 系統錯誤
           schema:
             $ref: '#/definitions/go-template_internal_utils_response.ErrorResponseData'
+      security:
+      - BearerAuth: []
       summary: 刪除使用者
       tags:
       - User
     get:
       description: 取得指定使用者的資訊
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -107,6 +121,8 @@ paths:
           description: 系統錯誤
           schema:
             $ref: '#/definitions/go-template_internal_utils_response.ErrorResponseData'
+      security:
+      - BearerAuth: []
       summary: 取得使用者資訊
       tags:
       - User
@@ -115,6 +131,11 @@ paths:
       - application/json
       description: 更新指定使用者的資訊
       parameters:
+      - description: 使用者 ID
+        in: path
+        name: id
+        required: true
+        type: integer
       - description: 使用者資料
         in: body
         name: user
@@ -145,6 +166,8 @@ paths:
           description: 系統錯誤
           schema:
             $ref: '#/definitions/go-template_internal_utils_response.ErrorResponseData'
+      security:
+      - BearerAuth: []
       summary: 更新使用者資訊
       tags:
       - User
